:bug: correctly wrap urls on small devices

--- a/src/Components/Markdown/Markdown.css
+++ b/src/Components/Markdown/Markdown.css
@@ -4,6 +4,7 @@
   --code-border: solid 1px var(--color-primary);
   max-width: 100vw;
   overflow-x: hidden;
+  overflow-wrap: break-word;
 }
 
 .Markdown > * {
